# neural-net

./: .gitignore  CMakeLists.txt  NeuralNet2.cpp  main.cpp
Classes/: DataInputFile.cpp  DataInputFile.h  NeuralNet.cpp  NeuralNet.h  Node.cpp  Node.h
